# NumberRecognition

./: README.md  boot_session.bat
NumberRecognitionLaunch/: CMakeLists.txt  traced_model.pt
NumberRecognitionLaunch/source/: main.cpp
NumberRecognitionTraining/: Execution.ipynb  model  traced_model.pt
